--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,104 @@
+.container {
+    padding: 0 20px;
+}
+
+a {
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.heading {
+    color: #1e1e1e;
+    font-size: 48px;
+    font-family: "Helvetica", sans-serif;
+    text-align: center;
+    padding: 10px;
+    background-color: #f8f8f8;
+}
+
+#intro {
+    display: flex;
+    margin: 30px 0;
+}
+
+#description {
+    padding: 20px;
+    margin-left: 30px;
+    background-color: #f0f0f0;
+    border: 1px solid #e8e8e8;
+    border-radius: 5px;
+}
+
+/* Form style */
+form {
+    min-width: 300px;
+    padding: 20px;
+    background-color: #f0f0f0;
+    border: 1px solid #e8e8e8;
+    border-radius: 5px;
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.file-input-container {
+    position: relative;
+}
+
+input[type="file"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.file-input-label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.file-input-label:hover {
+    background-color: #0056b3;
+}
+
+.file-input-label span {
+    margin-right: 10px;
+}
+
+.file-input-label i {
+    font-size: 18px;
+}
+
+input[type="submit"] {
+    margin-top: 10px;
+    background-color: #3CB371;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+input[type="submit"]:hover {
+    background-color: #3CB371;
+}
+
+/* Table */
 table {
-    border-collapse: collapse;
     width: 100%;
 }
 
@@ -21,21 +120,7 @@ tbody tr:hover {
     background-color: #ddd;
 }
 
-.heading {
-    color: #1e1e1e;
-    /* Set the text color */
-    font-size: 48px;
-    /* Set the font size */
-    font-family: "Helvetica", sans-serif;
-    /* Set the font family */
-    text-align: center;
-    /* Set the text alignment */
-    padding: 10px;
-    /* Add some padding around the heading */
-    background-color: #f8f8f8;
-    /* Set the background color */
-}
-
+/* Charts */
 #charts {
     display: flex;
     padding: 20px 0;
